--- a/HW/Final Project/report/sample.bib
+++ b/HW/Final Project/report/sample.bib
@@ -16,3 +16,9 @@
   year={2012},
   organization={Eurographics Association}
 }
+@article{hachisuka2015implementing,
+  title={Implementing a Photorealistic Rendering System using GLSL},
+  author={Hachisuka, Toshiya},
+  journal={arXiv preprint arXiv:1505.06022},
+  year={2015}
+}
