--- a/HW/Final Project/report/sample.bib
+++ b/HW/Final Project/report/sample.bib
@@ -22,3 +22,11 @@
   journal={arXiv preprint arXiv:1505.06022},
   year={2015}
 }
+@inproceedings{hapala2011efficient,
+  title={Efficient stack-less BVH traversal for ray tracing},
+  author={Hapala, Michal and Davidovi{\v{c}}, Tom{\'a}{\v{s}} and Wald, Ingo and Havran, Vlastimil and Slusallek, Philipp},
+  booktitle={Proceedings of the 27th Spring Conference on Computer Graphics},
+  pages={7--12},
+  year={2011},
+  organization={ACM}
+}
